bad/bin_op_ge_class_null.example_compiler_output
ERROR
[1mbad/bin_op_ge_class_null.lat:5:8: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `Y` and `null`[m
	new Y >= null;
	      [1;32m^[m
